// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / TabsNav Enabled horizontal scroll 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c3 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  overflow: auto;
  white-space: nowrap;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3:before {
  content: '';
  position: absolute;
  z-index: 1;
  top: 0;
  right: 0;
  height: 44px;
  pointer-events: none;
  background-image: linear-gradient(to right,rgba(255,255,255,0),#FFFFFF 100%);
  width: 10%;
}

.c3:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  height: 44px;
  pointer-events: none;
  background-image: linear-gradient(to left,rgba(255,255,255,0),#FFFFFF 100%);
  width: 10%;
}

.c3::-webkit-scrollbar {
  display: none;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route1"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={11}
            >
              <div>
                Link to /route1
              </div>
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route3"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route3
              </div>
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route4"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route4
              </div>
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route5"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route5
              </div>
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route6"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route6
              </div>
            </span>
          </a>
        </span>
      </li>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / TabsNav Integration: With react-router 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c3 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route1"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={11}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / TabsNav Integration: With react-router and height modified 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 96px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 96px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c3 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route1"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={24}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c8"
              height={24}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / TabsNav Integration: conditionally hide tab 1`] = `
.c8 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c3 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
        >
          <a
            className="c5"
            href="/route2"
            onClick={[Function]}
          >
            <span
              className="c6"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c7"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c8"
    >
      /route1 content
    </div>
  </div>
</div>
`;
